--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,18 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+.animated-element {
+  animation: move-left 0.7s linear;
+}
+
+@keyframes move-left {
+  0% {
+    transform: translateX(2000px) rotate(360deg);
+  }
+  100% {
+    transform: translateX(0) rotate(0deg);
+  }
+}
+
+
