--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,25 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+body{
+  background-color: #f1f5f9;
+}
+
 .animated-element {
-  animation: move-left 0.7s linear;
+  animation: move-left 1.2s linear;
+}
+
+.animated-font{
+  animation: show-text 1.2s linear;
+}
+
+@keyframes show-text{
+  0% {
+    transform: scale(0, 0);
+  }
+  100%{
+    transform: scale(100%, 100%);
+  }
 }
 
 @keyframes move-left {
