--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
-@tailwind base;
 
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -10,36 +10,43 @@
   font-weight: 900;
   src: url(./assets/fonts/Chillax-Bold.otf);
 }
+
 @font-face {
   font-family: custom-thin;
   font-weight: 900;
   src: url(./assets/fonts/Chillax-Light.otf);
 }
 
+@font-face {
+  font-family: kola;
+  font-weight: 900;
+  src: url(./assets/fonts/Kola-Regular.otf);
+}
+
 .animated-element {
   animation: move-left 1.2s linear;
 }
 
-.animated-font{
+.animated-font {
   animation: show-text 1.2s linear;
 }
 
-@keyframes show-text{
+@keyframes show-text {
   0% {
     transform: scale(0, 0);
   }
-  100%{
+
+  100% {
     transform: scale(100%, 100%);
   }
 }
 
 @keyframes move-left {
   0% {
-    transform: translateX(-1000px) rotate(360deg) scale(0,0);
+    transform: translateX(-2200px) rotate(360deg) scale(0, 0);
   }
+
   100% {
-    transform: translateX(0px) rotate(0deg) scale(100%,100%);
+    transform: translateX(0px) rotate(0deg) scale(100%, 100%);
   }
 }
-
-
