--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 @tailwind base;
+
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-
-body{
-  background-color: #f1f5f9;
+@font-face {
+  font-family: custom;
+  font-weight: 900;
+  src: url(./assets/fonts/Chillax-Bold.otf);
+}
+@font-face {
+  font-family: custom-thin;
+  font-weight: 900;
+  src: url(./assets/fonts/Chillax-Light.otf);
 }
 
 .animated-element {
@@ -27,10 +35,10 @@ body{
 
 @keyframes move-left {
   0% {
-    transform: translateX(2000px) rotate(360deg);
+    transform: translateX(-1000px) rotate(360deg) scale(0,0);
   }
   100% {
-    transform: translateX(0) rotate(0deg);
+    transform: translateX(0px) rotate(0deg) scale(100%,100%);
   }
 }
 
